indico/modules/rb_new/client/js/components/Room.module.scss
/* This file is part of Indico.
 * Copyright (C) 2002 - 2018 European Organization for Nuclear Research (CERN).
 *
 * Indico is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation; either version 3 of the
 * License, or (at your option) any later version.
 *
 * Indico is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Indico; if not, see <http://www.gnu.org/licenses/>.
 */


.room-card {
    height: 320px;
    width: 300px;

    :global(.ui.active.visible.dimmer) {
        display: flex !important;
    }

    .room-title {
        font-size: 1em;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .room-image {
        position: relative;

        :global(.ui.image.dimmable) {
            width: 100%;
        }

        .room-extra-info {
            position: absolute;
            z-index: 1;
            width: 100%;
            height: 100%;
            pointer-events: none;
        }

        img {
            width: 100%;
            height: 170px !important;
        }
    }

    .room-description {
        word-break: break-all;

        .room-comments {
            word-break: normal;
            white-space: nowrap;
            text-overflow: ellipsis;
            overflow: hidden;
            height: 40px;
        }
    }

    .room-content {
        .room-details {
            float: right;
        }
    }
}

